--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,18 @@
 @import "code-light.css" (prefers-color-scheme: light);
 @import "code-dark.css" (prefers-color-scheme: dark);
 
+:root {
+  --iso-wide: 15rem;
+  --iso-tall: calc(var(--iso-wide) * 1.75);
+  --iso-xpos: calc(var(--iso-wide) / 2.00);
+  --iso-ypos: calc(var(--iso-tall) / 2.00);
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    --background: #DDDDDD;
+    --background-A: #A0A0A0;
+    --background-B: #A4A4A4;
+    --background-C: #A7A7A7;
     --background-dim: #CCCCCC;
     --foreground: #000000;
     --foreground-dim: #202020;
@@ -14,8 +23,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #202020;
-    --background-dim: #303030;
+    --background-A: #040404;
+    --background-B: #080808;
+    --background-C: #0F0F0F;
+    --background-dim: #202020;
     --foreground: #BBBBBB;
     --foreground-dim: #A3A3A3;
     --foreground-heavy: #F0F0F0;
@@ -32,8 +43,19 @@ html {
 body {
   margin: 0 auto;
   max-width: 50rem;
-  background: var(--background);
   color: var(--foreground);
+
+  background-color: var(--background-A);
+  background-image:
+    linear-gradient(30deg,  var(--background-B) 12%, transparent 12.5%, transparent 87%, var(--background-B) 87.5%, var(--background-B)),
+    linear-gradient(150deg, var(--background-B) 12%, transparent 12.5%, transparent 87%, var(--background-B) 87.5%, var(--background-B)),
+    linear-gradient(30deg,  var(--background-B) 12%, transparent 12.5%, transparent 87%, var(--background-B) 87.5%, var(--background-B)),
+    linear-gradient(150deg, var(--background-B) 12%, transparent 12.5%, transparent 87%, var(--background-B) 87.5%, var(--background-B)),
+    linear-gradient(60deg,  var(--background-C) 25%, transparent 25.5%, transparent 75%, var(--background-C) 75.0%, var(--background-C)),
+    linear-gradient(60deg,  var(--background-C) 25%, transparent 25.5%, transparent 75%, var(--background-C) 75.0%, var(--background-C));
+  background-position: 0 0, 0 0, var(--iso-xpos) var(--iso-ypos), var(--iso-xpos) var(--iso-ypos), 0 0, var(--iso-xpos) var(--iso-ypos);
+  background-size: var(--iso-wide) var(--iso-tall);
+
   line-height: 1.5;
   padding: 0rem 0.5rem;
 }
