--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,8 @@
       <p>
         <a href="/atom.xml">atom.xml</a>&nbsp;
         <a rel="me" href="https://bsky.app/profile/at.untode.su">bluesky</a>&nbsp;
-        <a rel="me"href="https://github.com/untodesu">github</a>
+        <a rel="me" href="https://github.com/untodesu">github</a>&nbsp;
+        <a rel="me" href="https://labs.untode.su">untolabs</a>
       </p>
       <p>built with <a href="https://github.com/venthur/blag">venthur/blag</a></p>
     </footer>
