I changed my bluesky handle

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <footer>
       <p>
         <a href="/atom.xml">atom.xml</a>&nbsp;
-        <a rel="me" href="https://bsky.app/profile/at.untode.su">bluesky</a>&nbsp;
+        <a rel="me" href="https://bsky.app/profile/untode.su">bluesky</a>&nbsp;
         <a rel="me" href="https://github.com/untodesu">github</a>
       </p>
       <p>built with <a href="https://github.com/venthur/blag">venthur/blag</a></p>
