Crutch in paths to point towards /blog/

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,6 @@
 
 {% endfor %}
 
-<p><a target="_self" href="/archive.html">all articles...</a></p>
+<p><a target="_self" href="/blog/archive.html">all articles...</a></p>
 
 {% endblock %}
