--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
     {%- else %}
     <meta name="description" content="{{ site.description }}"/>
     {%- endif %}
-    <link rel="alternate" href="/atom.xml" type="application/atom+xml"/>
-    <link rel="stylesheet" href="/style.css" type="text/css"/>
+    <link rel="alternate" href="/blog/atom.xml" type="application/atom+xml"/>
+    <link rel="stylesheet" href="/blog/style.css" type="text/css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/>
@@ -27,9 +27,9 @@
       <nav>
         <h2>{{ site.description }}</h2>
         <ul>
-          <li><h2><a target="_self" href="/">[blog]</a></h2></li>
-          <li><h2><a target="_self" href="/archive.html">[archive]</a></h2></li>
-          <li><h2><a target="_self" href="/tags/">[tags]</a></h2></li>
+          <li><h2><a target="_self" href="/blog/">[home]</a></h2></li>
+          <li><h2><a target="_self" href="/blog/archive.html">[archive]</a></h2></li>
+          <li><h2><a target="_self" href="/blog/tags/">[tags]</a></h2></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,7 @@
     </main>
     <footer>
       <p>
-        <a href="/atom.xml">atom.xml</a>&nbsp;
+        <a href="/blog/atom.xml">atom.xml</a>&nbsp;
         <a rel="me" href="https://bsky.app/profile/untode.su">bluesky</a>&nbsp;
         <a rel="me" href="https://github.com/untodesu">github</a>
       </p>
