Add a link to the root website

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
       <nav>
         <h2>{{ site.description }}</h2>
         <ul>
-          <li><h2><a target="_self" href="/blog/">[home]</a></h2></li>
+          <li><h2><a target="_self" href="/">[root]</a></h2></li>
+          <li><h2><a target="_self" href="/blog/">[blog]</a></h2></li>
           <li><h2><a target="_self" href="/blog/archive.html">[archive]</a></h2></li>
           <li><h2><a target="_self" href="/blog/tags/">[tags]</a></h2></li>
         </ul>
