--- a/templates/article.html
+++ b/templates/article.html
@@ -16,7 +16,7 @@
       {% for tag in tags|sort(case_sensitive=true) %}
         {%- if not loop.first and not loop.last %}, {% endif -%}
         {%- if loop.last and not loop.first %} and {% endif %}
-        <a target="_self" href="/blog/tags/{{ tag }}.html">#{{ tag }}</a>
+        <a target="_self" href="/tags/{{ tag }}.html">#{{ tag }}</a>
       {%- endfor %}
     {% endif %}
     </p>
