--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     </main>
     <footer>
       <p class="f-badges">
-        <img class="f-badge" src="/badges/zov.png" height="31"/>
+        <img class="f-badge" src="/badges/zov.png" height="31" alt="ragebait"/>
         <img class="f-badge" src="/badges/nekojiru2.gif" height="31"/>
         <img class="f-badge" src="/badges/nft.gif" height="31"/>
         <a rel="me" href="https://github.com/untodesu"><img class="f-badge" src="/badges/github.png"/></a>
