git add <comma>

--- a/static/style.css
+++ b/static/style.css
@@ -156,6 +156,7 @@ blockquote {
   font-style: italic;
   border-left: 2px solid var(--primary-color);
   margin: 0;
+  margin-top: 1rem;
   padding: 1rem;
 }
 
@@ -195,6 +196,14 @@ header h2 {
 
 .katex {
   font-size: xx-large;
+}
+
+img.emoji {
+  margin: 0;
+  min-width: 0;
+  min-height: 0;
+  width: 0.75rem;
+  height: auto;
 }
 
 @media only screen and (max-width: 768px) {
